refactor: refactor ChatController