@@ -2,14 +2,20 @@ package com.pigeon_stargram.sns_clone.service.follow;
 
 import com.pigeon_stargram.sns_clone.domain.follow.Follow;
 import com.pigeon_stargram.sns_clone.domain.user.User;
-import com.pigeon_stargram.sns_clone.dto.Follow.AddFollowDto;
-import com.pigeon_stargram.sns_clone.dto.Follow.DeleteFollowDto;
-import com.pigeon_stargram.sns_clone.dto.Follow.ResponseFollowerDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.internal.AddFollowDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.internal.DeleteFollowDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.response.ResponseFollowerDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.internal.FindFollowersDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.internal.FindFollowingsDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.internal.GetNotificationEnabledDto;
+import com.pigeon_stargram.sns_clone.dto.Follow.internal.ToggleNotificationEnabledDto;
 import com.pigeon_stargram.sns_clone.dto.chat.response.LastMessageDto;
 import com.pigeon_stargram.sns_clone.dto.chat.response.ResponseUserChatDto;
+import com.pigeon_stargram.sns_clone.exception.follow.FollowExistException;
 import com.pigeon_stargram.sns_clone.repository.follow.FollowRepository;
 import com.pigeon_stargram.sns_clone.service.notification.NotificationService;
 import com.pigeon_stargram.sns_clone.service.chat.ChatService;
+import com.pigeon_stargram.sns_clone.service.user.UserBuilder;
 import com.pigeon_stargram.sns_clone.service.user.UserService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -18,8 +24,9 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static com.pigeon_stargram.sns_clone.service.follow.FollowBuilder.*;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -33,112 +40,102 @@ public class FollowService {
     private final NotificationService notificationService;
 
     public Follow createFollow(AddFollowDto dto) {
-        User sender = userService.findById(dto.getSenderId());
-        User recipient = userService.findById(dto.getRecipientIds().getFirst());
-        log.info("sender ={}, recipient = {}",sender.getId(),recipient.getId());
-        followRepository.findBysenderAndRecipient(sender, recipient)
+        Long senderId = dto.getSenderId();
+        Long recipientId = dto.getRecipientId();
+
+        followRepository.findBySenderIdAndRecipientId(senderId, recipientId)
                 .ifPresent(follow -> {
-                    throw new IllegalArgumentException("이미 팔로우 중입니다.");
+                    throw new FollowExistException("이미 팔로우 중입니다.");
                 });
 
-        Follow follow = followRepository.save(dto.toEntity(sender, recipient));
+        User sender = userService.findById(senderId);
+        User recipient = userService.findById(recipientId);
+        log.info("sender ={}, recipient = {}",sender.getId(),recipient.getId());
+
+        Follow follow = buildFollow(sender, recipient);
+        Follow save = followRepository.save(follow);
+
         notificationService.send(dto);
-        return follow;
+
+        return save;
     }
 
     public void deleteFollow(DeleteFollowDto dto){
-        User sender = userService.findById(dto.getSenderId());
-        User recipient = userService.findById(dto.getRecipientId());
-        followRepository.findBysenderAndRecipient(sender, recipient)
-                .ifPresent(followRepository::delete);
+        followRepository.deleteBySenderIdAndRecipientId(dto.getSenderId(), dto.getRecipientId());
     }
 
     public List<ResponseFollowerDto> findFollowers(Long userId) {
-        User user = userService.findById(userId);
-
-        return followRepository.findByRecipient(user).stream()
+        return followRepository.findByRecipientId(userId).stream()
                 .map(Follow::getSender)
                 .map(sender -> new ResponseFollowerDto(sender, 1))
                 .toList();
     }
 
     public List<ResponseFollowerDto> findFollowings(Long userId) {
-        User user = userService.findById(userId);
-
-        return followRepository.findBySender(user).stream()
+        return followRepository.findBySenderId(userId).stream()
                 .map(Follow::getRecipient)
                 .map(recipient -> new ResponseFollowerDto(recipient, 1))
                 .toList();
     }
 
-    public List<ResponseFollowerDto> findFollowers(Long currentUserId, Long userId) {
-        User user = userService.findById(userId);
-        User currentUser = userService.findById(currentUserId);
+    public List<ResponseFollowerDto> findFollowers(FindFollowersDto dto) {
+        Long loginUserId = dto.getLoginUserId();
+        Long userId = dto.getUserId();
 
-        return followRepository.findByRecipient(user).stream()
+        return followRepository.findByRecipientId(userId).stream()
                 .map(Follow::getSender)
                 .map(sender -> {
-                    Integer isFollowing = isFollowing(currentUser, sender) ? 1 : 2;
+                    Integer isFollowing =
+                            isFollowing(loginUserId, sender.getId()) ? 1 : 2;
                     return new ResponseFollowerDto(sender, isFollowing);
                 })
                 .toList();
     }
 
-    public Boolean isFollowing(User source, User target) {
-        return followRepository.findByRecipient(target)
+    public Boolean isFollowing(Long sourceId, Long targetId) {
+        return followRepository.findByRecipientId(targetId)
                 .stream()
-                .anyMatch(follow -> follow.getSender().equals(source));
+                .anyMatch(follow -> follow.getSender().getId().equals(sourceId));
     }
 
-    private Boolean checkMutualFollow(User user1, User user2) {
-        return isFollowing(user1, user2) && isFollowing(user2, user1);
+    private Boolean checkMutualFollow(Long user1Id, Long user2Id) {
+        return isFollowing(user1Id, user2Id) && isFollowing(user2Id, user1Id);
     }
 
     public List<Long> findFollows(Long userId) {
-        User user = userService.findById(userId);
-
-        return followRepository.findByRecipient(user).stream()
+        return followRepository.findByRecipientId(userId).stream()
                 .filter(Follow::getIsNotificationEnabled)
                 .map(follow -> follow.getSender().getId())
                 .toList();
     }
 
-    public List<ResponseFollowerDto> findFollowings(Long currentUserId, Long userId) {
-        User user = userService.findById(userId);
-        User currentUser = userService.findById(currentUserId);
+    public List<ResponseFollowerDto> findFollowings(FindFollowingsDto dto) {
+        Long loginUserId = dto.getLoginUserId();
+        Long userId = dto.getUserId();
 
-        return followRepository.findBySender(user).stream()
+        return followRepository.findBySenderId(userId).stream()
                 .map(Follow::getRecipient)
                 .map(recipient -> {
-                    Integer isFollowing = isFollowing(currentUser, recipient) ? 1 : 2;
+                    Integer isFollowing =
+                            isFollowing(loginUserId, recipient.getId()) ? 1 : 2;
                     return new ResponseFollowerDto(recipient, isFollowing);
                 })
                 .toList();
     }
 
-    public List<User> findAll(){
-        return followRepository.findAll().stream()
-                .map(Follow::getRecipient)
-                .collect(Collectors.toList());
-    }
-
     public List<ResponseUserChatDto> findPartnersForChat(Long currentUserId) {
-        User currentUser = userService.findById(currentUserId);
-
-        List<User> followers = followRepository.findByRecipient(currentUser)
-                .stream()
+        List<User> followers = followRepository.findByRecipientId(currentUserId).stream()
                 .map(Follow::getSender)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<User> following = followRepository.findBySender(currentUser)
-                .stream()
+        List<User> following = followRepository.findBySenderId(currentUserId).stream()
                 .map(Follow::getRecipient)
-                .collect(Collectors.toList());
+                .toList();
 
         return Stream.concat(followers.stream(), following.stream())
                 .distinct()
                 .map(user -> {
-                    Integer unReadChatCount = chatService.getUnreadChatCount(currentUserId, user.getId());
+                    Integer unreadChatCount = chatService.getUnreadChatCount(currentUserId, user.getId());
                     LastMessageDto lastMessage = chatService.getLastMessage(currentUserId, user.getId());
 
                     Integer state;
@@ -153,26 +150,34 @@ public class FollowService {
                         state = 0;
                     }
 
-                    return new ResponseUserChatDto(user, unReadChatCount, lastMessage, state);
+                    return UserBuilder.buildResponseUserChatDto(
+                            user, unreadChatCount, lastMessage, state);
                 })
-                .sorted(Comparator.comparing(ResponseUserChatDto::getLastMessage, Comparator.nullsLast(Comparator.reverseOrder())))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(
+                        ResponseUserChatDto::getLastMessage,
+                        Comparator.nullsLast(Comparator.reverseOrder())))
+                .toList();
     }
 
-    public Long countFollowings(User user) {
-        return followRepository.countBySender(user);
+    public Long countFollowings(Long userId) {
+        return followRepository.countBySenderId(userId);
     }
 
-    public Long countFollowers(User user) {
-        return followRepository.countByRecipient(user);
+    public Long countFollowers(Long userId) {
+        return followRepository.countByRecipientId(userId);
     }
 
-    public void toggleNotificationEnabled(User sender, User recipient) {
-        followRepository.findBysenderAndRecipient(sender, recipient)
+    public void toggleNotificationEnabled(ToggleNotificationEnabledDto dto) {
+        Long loginUserId = dto.getLoginUserId();
+        Long targetUserId = dto.getTargetUserId();
+        followRepository.findBySenderIdAndRecipientId(loginUserId, targetUserId)
                 .ifPresent(Follow::toggleNotificationEnabled);
     }
-    public Boolean getNotificationEnabled(User sender, User recipient) {
-        return followRepository.findBysenderAndRecipient(sender, recipient)
+
+    public Boolean getNotificationEnabled(GetNotificationEnabledDto dto) {
+        Long senderId = dto.getLoginUserId();
+        Long recipientId = dto.getTargetUserId();
+        return followRepository.findBySenderIdAndRecipientId(senderId, recipientId)
                 .map(Follow::getIsNotificationEnabled)
                 .orElse(false);
     }
